--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Uma Alma Escarlate </title>
+    <title>Uma Alma Efêmera </title>
   </head>
   <body>
     <h1 class="title">A Herdeira do Reino Lunar</h1>
