--- a/SkillTree.html
+++ b/SkillTree.html
@@ -15,9 +15,11 @@
   </head>
   <body>
      <nav>
-        <div class="logo">
-            <img decoding="async" src="img/Centro.png" alt="Logo Image">
-        </div>
+          <a href="https://reysouza.github.io/Shiroi/">
+          <div class="logo">
+          <img decoding="async" src="img/Centro.png" alt="Logo Image">
+          </div>
+          </a>
         <div class="hamburger">
             <div class="bars1"></div>
             <div class="bars2"></div>
@@ -33,11 +35,9 @@
             <input type="number" id="input">
            </div>
           <br>
+           <div id="outputDisplay"></div>
            <button onclick="convertNumber()">Converter</button>
            <br><br>
-           <div id="outputDisplay"></div>
-
-            <li><button class="login-button" href="https://reysouza.github.io/Shiroi/">Retornar</button></li>
         </ul>
     </nav>
 
