--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
             <form action="">
               <input type="checkbox" id="lesion" name="lesion" value="lesion" />
               <label for="lesion"> Lesão grave</label>
-              <input type="checkbox" id="possessed" name="possession" value="possession" />
-              <label for="injury"> Possessão</label>
+              <input type="checkbox" id="possession" name="possession" value="possession" />
+              <label for="possession"> Possessão</label>
               <input type="checkbox" id="dying" name="dying" value="dying" />
               <label for="dying"> Morrendo</label>
             </form>
