--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -14,6 +16,16 @@
     <title>Uma Alma Efêmera </title>
   </head>
   <body>
+
+<div class="header">
+  <div class="header-right">
+    <a class="active" href="https://reysouza.github.io/Shiroi/SkillTree.html">Árvore de Habilidades</a>
+    <a href="https://reysouza.github.io/Hyakki/map.html">Mapa</a>
+    <a href="https://reysouza.github.io/Hyakki/loja.html">Loja</a>
+    <a href="https://reysouza.github.io/Hyakki/bestiary.html">Gazu Hyakki Yagyō</a>
+  </div>
+</div>
+
     <h1 class="title">A Herdeira do Reino Lunar</h1>
 
     <!-- modal -->
@@ -392,6 +404,23 @@
       </table>
      </div>
     </div>
+
+<div class="modal fade" id="expertise2DescriptionModal" tabindex="-1" aria-labelledby="expertise2DescriptionModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg"> <!-- add modal-lg class here -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="expertise2DescriptionTitle"></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p id="expertise2DescriptionText"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <a href="https://reysouza.github.io/Shiroi/SkillTree.html">Árvore de Habilidades</a>
 
