--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
       </div>
     </div>
 
+      <button href="https://reysouza.github.io/Parinirvana/Okcu">
+  <img src="img/door-8-xxl.png" alt="A nova ordem mundial" style="position: absolute; width: 10%;">
+        </button>
+
      <div id="staminaModal" class="modal with-input">
       <div class="modal-content">
         <h2>MODIFICAR STAMINA</h2>
