--- a/index.html
+++ b/index.html
@@ -70,10 +70,6 @@
       </div>
     </div>
 
-      <button href="https://reysouza.github.io/Parinirvana/Okcu">
-  <img src="img/door-8-xxl.png" alt="A nova ordem mundial" style="position: absolute; width: 10%;">
-        </button>
-
      <div id="staminaModal" class="modal with-input">
       <div class="modal-content">
         <h2>MODIFICAR STAMINA</h2>
@@ -263,6 +259,9 @@
             <option value="female">Feminino</option>
             <option value="other">Outros</option>
           </select>
+      <a href="https://reysouza.github.io/Parinirvana/Okcu.html">
+  <img src="img/door-8-xxl.png" alt="A nova ordem mundial" style="position: absolute; width: 3%;">
+        </a>
           <h4>Local de nascimento</h4>
           <input type="text" name="birthplace" id="birthplace" value="" />
         </div>
